--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,7 +81,7 @@ play {
 dependencies {
     final PLAY_SERVICES_VERSION = '8.4.0'
     final SUPPORT_LIBRARY_VERSION = '23.1.1'
-    final RETROFIT_VERSION = '2.0.0-beta3'
+    final RETROFIT_VERSION = '2.0.0'
     final DAGGER_VERSION = '2.0.2'
     final DEXMAKER_VERSION = '1.4'
     final HAMCREST_VERSION = '1.3'
@@ -116,6 +116,9 @@ dependencies {
 
     compile  "com.google.dagger:dagger:$DAGGER_VERSION"
     provided 'org.glassfish:javax.annotation:10.0-b28' //Required by Dagger2
+
+    apt 'org.parceler:parceler:1.0.4'
+    compile 'org.parceler:parceler-api:1.0.4'
 
     // Instrumentation test dependencies
     androidTestCompile jUnit
