--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,10 @@ android {
     lintOptions {
         warning 'InvalidPackage'
     }
+
+    packagingOptions {
+        exclude 'META-INF/services/javax.annotation.processing.Processor'
+    }
 }
 
 play {
@@ -120,6 +124,9 @@ dependencies {
     apt 'org.parceler:parceler:1.0.4'
     compile 'org.parceler:parceler-api:1.0.4'
 
+    // TODO - should this be compileOnly?
+    compile "com.google.auto.value:auto-value:1.2"
+
     // Instrumentation test dependencies
     androidTestCompile jUnit
     androidTestCompile mockito
@@ -145,6 +152,8 @@ dependencies {
     testCompile 'org.robolectric:robolectric:3.0'
 
     // APT dependencies
+    apt 'com.google.auto.value:auto-value:1.2'
+    apt 'com.ryanharter.auto.value:auto-value-gson:0.2.2'
     apt daggerCompiler
     testApt daggerCompiler
     androidTestApt daggerCompiler
